added menu actions

--- a/index.html
+++ b/index.html
@@ -8,12 +8,27 @@
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
+    <!-- Header -->
     <header>
         <div class="logo">
             <img src="./img/Logo.png" alt="img non disponibile">
             <h1>Toboolist</h1>
         </div>
     </header>
+
+    <!-- Corpo -->
+    <main>
+        <div class="container">
+            <div class="actions">
+                <button>Add Task</button>
+                <button>Add Section</button>
+            </div>
+            <div class="new-tasks">
+
+            </div>
+
+        </div>
+    </main>
     
 </body>
 </html>
