--- a/index.html
+++ b/index.html
@@ -16,17 +16,57 @@
         </div>
     </header>
 
-    <!-- Corpo -->
     <main>
+        <!-- Menu -->
         <div class="container">
             <div class="actions">
                 <button>Add Task</button>
                 <button>Add Section</button>
             </div>
-            <div class="new-tasks">
-
+            
+            <!-- Activities -->
+            <div class="tasks">
+                <h2>New Task</h2>
+                <ul>
+                    <li class="tskdone">Quarterly Newsletter
+                        <div class="tsktype tsk1">Editorial</div>
+                    </li>
+                </ul>
             </div>
+            <div class="tasks">
+                <h2>Today</h2>
+                <ul>
+                    <li class="tskdone">Recruiting blog post
+                        <div class="tsktype tsk1">Editorial</div>
+                    </li>
+                    <li class="tskdone">Mobile app launch
+                        <div class="tsktype tsk2">Q1 Goals</div>
+                    </li>
+                    <li class="tsknotdone">Interview John H.
+                        <div class="tsktype tsk3">Recruiting</div>
+                    </li>
+                    <li class="tskdone">Summit update to mobile storefronts
+                        <div class="tsktype tsk4">Mobile</div>
+                    </li>
 
+                </ul>
+            </div>
+            <div class="tasks">
+                <h2>Upcoming</h2>
+                <ul>
+                    <li class="tsknotdone">Schedule meeting with Alex
+                    </li>
+                    <li class="tskdone">Homepage refresh
+                        <div class="tsktype tsk5">Website</div>
+                    </li>
+                    <li class="tskdone">Onboard new Sales team members
+                        <div class="tsktype tsk6">Sales</div>
+                    </li>
+                    <li class="tskdone">Review editorial calendar
+                        <div class="tsktype tsk1">Editorial</div>
+                    </li>
+                </ul>
+            </div>
         </div>
     </main>
     
